--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://descodes.github.io/robofriends/",
+  "homepage": "https://descodes.github.io/robofriends-app/",
   "name": "robofriends",
   "version": "0.1.0",
   "private": true,
